--- a/velocity/velocity/velocity.csproj
+++ b/velocity/velocity/velocity.csproj
@@ -56,6 +56,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="drawable_elements\block_element.cs" />
+    <Compile Include="drawable_elements\drawable.cs" />
+    <Compile Include="paint_context.cs" />
+    <Compile Include="paint_layer.cs" />
     <Compile Include="tasks\layout_task.cs" />
     <Compile Include="tasks\paint_task.cs" />
     <Compile Include="WebView.cs">
